eds-320 udated fixed z-index

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -392,7 +392,7 @@ header .nav-search-input .search_autocomplete .popover-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 5;
+  z-index: 10;
   overflow-y: auto;
   padding: 10px 0;
   box-sizing: border-box;
